농활신청까지

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <style>
     *{
       font-family: 'NanumSquareRound',sans-serif;
+      box-sizing: border-box;
     }
     html { font-size: 10px !important; }
     @media (max-width:360px){html{font-size:11px !important;}}
