--- a/index.html
+++ b/index.html
@@ -1,28 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    <link rel="shortcut icon" type="image/png" href="/static/Icon.png"/>
-    <title>nongchung_web</title>
-    <style>
-    *{
-      font-family: 'NanumSquareRound',sans-serif;
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta property="og:title" content="농활청춘">
+  <meta property="og:description" content="농촌에서 꽃 피는 청춘">
+  <meta property="og:image" content="/static/shareThumbnail2.png">
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+    crossorigin="anonymous">
+  <link rel="shortcut icon" type="image/png" href="/static/Icon.png" />
+  <title>nongchung_web</title>
+  <style>
+    * {
+      font-family: 'NanumSquareRound', sans-serif;
       box-sizing: border-box;
     }
-    html { font-size: 10px !important; }
-    @media (max-width:360px){html{font-size:11px !important;}}
-    @media (min-width:361px) and (max-width:600px){html{font-size:12px !important;}}
-    @media (min-width:601px) and (max-width:960px){html{font-size:13px !important;}}
-    @media (min-width:961px) and (max-width:1260px){html{font-size:14px !important;}}
-    @media (min-width:1261px) and (max-width:1960px){html{font-size:15px !important;}}
-    </style>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+    html {
+      font-size: 10px !important;
+    }
+
+    @media (max-width:360px) {
+      html {
+        font-size: 11px !important;
+      }
+    }
+
+    @media (min-width:361px) and (max-width:600px) {
+      html {
+        font-size: 12px !important;
+      }
+    }
+
+    @media (min-width:601px) and (max-width:960px) {
+      html {
+        font-size: 13px !important;
+      }
+    }
+
+    @media (min-width:961px) and (max-width:1260px) {
+      html {
+        font-size: 14px !important;
+      }
+    }
+
+    @media (min-width:1261px) and (max-width:1960px) {
+      html {
+        font-size: 15px !important;
+      }
+    }
+
+  </style>
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
