modify attend person

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
     crossorigin="anonymous">
   <link rel="shortcut icon" type="image/png" href="/static/Icon.png" />
+
+  <!-- Downloaded chart.css -->
+  <link rel="stylesheet" href="chart.css">
+  <!-- RawGit CDN chart.css -->
+  <link rel="stylesheet" href="https://cdn.rawgit.com/theus/chart.css/v1.0.0/dist/chart.css" />
+
   <title>nongchung_web</title>
   <style>
     * {
